# LightClear

./: .gitignore  AGENTS.md  Makefile  README.md  demo_se.py  pyproject.toml  requirements.txt  speech_enhance_compare_gui.py  speech_enhance_compare_gui_v2.py  speech_enhance_gui.py
.streamlit/: config.toml
assets/clearvoice_samples/scp/: audio_samples.scp  audio_samples_mix.scp  audio_samples_sr.scp  video_samples.scp
demo/: demo.py  demo_Numpy2Numpy.py  demo_frcrn_se.py  demo_mossformergan_se.py  demo_se.py  demo_sr.py  demo_ss.py  demo_tensor2tensor.py  demo_tse.py  demo_with_more_comments.py
models/se_models/: models.txt
models/sr_models/: .gitignore  models.txt
models/ss_models/: models.txt
playground/mossformer2_se_gui/common/: utils.py  worker.py
playground/mossformer2_se_gui/speech_enhance/: speech_enhance_main.py
playground/mossformer2_se_gui/speech_enhance_compare/: speech_enhance_compare_main.py
playground/mossformer2_se_streamlit_webui/: README.md  __init__.py  app.py  audio_analysis.py  runtime.py
playground/mossformer2_se_web/: README.md  __init__.py
playground/mossformer2_se_web/backend/: __init__.py  analysis.py  app.py  runtime.py
playground/mossformer2_se_web/frontend/: index.html
products/speech_enhance_web/: README.md  __init__.py
products/speech_enhance_web/backend/: __init__.py  app.py  runtime.py
products/speech_enhance_web/frontend/: app.js  index.html  styles.css
products/speech_separation_web/: README.md  __init__.py
products/speech_super_resolution_web/: README.md  __init__.py
(+16 files in other folders)
